--- a/less/header.less
+++ b/less/header.less
@@ -121,8 +121,8 @@
 
 						.btn {
 							width: 100%;
-							height: 35px;
-							border-radius: 6px;
+							height: 40px;
+							border-radius: 20px;
 							font-size: 20px;
 							line-height: 1.33333;
 							padding: 0px 16px;
@@ -143,8 +143,9 @@
 					margin-top: 45px;
 
 					.form-control {
-						height: 35px;
+						height: 40px;
 						color: @cbf-light-grey;
+						border-radius: 20px 0 0 20px;
 						border-color: lighten(@cbf-dark-blue, 15%);
 						float: right;
 						width: 100%;
@@ -155,8 +156,10 @@
 					}
 
 					.btn {
-						height: 35px;
+						height: 40px;
 						color: white;
+						border-radius: 0 20px 20px 0;
+						padding: 6px 20px 6px 12px;
 					}
 				}
 			}
@@ -203,6 +206,7 @@
 
 		color: white;
 		background: @cbf-light-blue;
+		border-radius: 20px;
 		margin-bottom: 25px;
 
 		.block {
@@ -226,6 +230,8 @@
 
 				a {
 					border: 1px solid @gray-lighter;
+					border-radius: 20px;
+					padding: 11px 15px;
 				}
 
 				a:hover, a:focus {
@@ -235,7 +241,7 @@
 		}
 
 		.nav li a, .block-views .view {
-			margin: 5px;
+			margin: 0 5px 10px;
 		}
 
 		.nav-pills > li + li {
