--- a/less/footer.less
+++ b/less/footer.less
@@ -7,6 +7,8 @@
 		.panel;
 		.panel-variant(@cbf-dark-grey; @cbf-light-grey; @cbf-dark-grey; @cbf-dark-grey);
 
+		border-radius: 20px;
+
 		color: @cbf-light-grey;
 		background-color: @cbf-dark-grey;
 
@@ -37,7 +39,9 @@
 				vertical-align: top;
 
 				a {
-					padding: 10px 5px;
+					height: 40px;
+					padding: 10px;
+					border-radius: 20px;
 				}
 			}
 		}
@@ -51,6 +55,7 @@
 			li {
 				a {
 					padding: 2px;
+					border-radius: 10px;
 
 					i {
 						font-size: 36px;
