Format events displayed in views: smaller date text; other times formatting; margin above body to make date text clearer

--- a/less/content.less
+++ b/less/content.less
@@ -342,12 +342,23 @@
 				&.views-field-field-date-text,
 				&.views-field-field-episode-date {
 					font-style: italic;
+					font-size: 13px;
+					line-height: 20px;
+
+					.other-times {
+						font-style: italic;
+						display: inline-block;
+					}
 				}
 
 				&.views-field-taxonomy-vocabulary-1,
 				&.views-field-field-in-activity,
 				&.views-field-field-speakers {
 					font-weight: bold;
+				}
+
+				&.views-field-body {
+					margin-top: 10px; // Matches the margin under a H3 views-field-title
 				}
 
 				&.views-field-field-campus-find-us {
