--- a/css/style.css
+++ b/css/style.css
@@ -10131,6 +10131,23 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-1-region .block-system .block-panel .views-field.views-field-field-episode-date,
 .sidebar-2-region .block-system .block-panel .views-field.views-field-field-episode-date {
   font-style: italic;
+  font-size: 13px;
+  line-height: 20px;
+}
+.content-region .block-views .block-panel .views-field.views-field-field-date-text .other-times,
+.sidebar-1-region .block-views .block-panel .views-field.views-field-field-date-text .other-times,
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-date-text .other-times,
+.content-region .block-system .block-panel .views-field.views-field-field-date-text .other-times,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-date-text .other-times,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-date-text .other-times,
+.content-region .block-views .block-panel .views-field.views-field-field-episode-date .other-times,
+.sidebar-1-region .block-views .block-panel .views-field.views-field-field-episode-date .other-times,
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-episode-date .other-times,
+.content-region .block-system .block-panel .views-field.views-field-field-episode-date .other-times,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-episode-date .other-times,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-episode-date .other-times {
+  font-style: italic;
+  display: inline-block;
 }
 .content-region .block-views .block-panel .views-field.views-field-taxonomy-vocabulary-1,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-taxonomy-vocabulary-1,
@@ -10151,6 +10168,14 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-1-region .block-system .block-panel .views-field.views-field-field-speakers,
 .sidebar-2-region .block-system .block-panel .views-field.views-field-field-speakers {
   font-weight: bold;
+}
+.content-region .block-views .block-panel .views-field.views-field-body,
+.sidebar-1-region .block-views .block-panel .views-field.views-field-body,
+.sidebar-2-region .block-views .block-panel .views-field.views-field-body,
+.content-region .block-system .block-panel .views-field.views-field-body,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-body,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-body {
+  margin-top: 10px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-campus-find-us i,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-campus-find-us i,
