Restore the padding and margins on A elements in dropdown menus in the page header

--- a/css/style.css
+++ b/css/style.css
@@ -7630,17 +7630,20 @@ table .checkbox input[type="checkbox"] {
 }
 #page-header .region-header .nav li .dropdown-menu li a {
   border: 0px;
+  border-radius: 0px;
+  margin: 0;
+  padding: 3px 20px;
 }
 #page-header .region-header .nav li a {
   border: 1px solid #eeeeee;
   border-radius: 20px;
+  margin: 0 5px 10px;
   padding: 11px 15px;
 }
 #page-header .region-header .nav li a:hover,
 #page-header .region-header .nav li a:focus {
   color: #02426f;
 }
-#page-header .region-header .nav li a,
 #page-header .region-header .block-views .view {
   margin: 0 5px 10px;
 }
