--- a/less/header.less
+++ b/less/header.less
@@ -225,12 +225,16 @@
 
 					a {
 						border: 0px;
+						border-radius: 0px;
+						margin: 0;
+						padding: 3px 20px;
 					}
 				}
 
 				a {
 					border: 1px solid @gray-lighter;
 					border-radius: 20px;
+					margin: 0 5px 10px;
 					padding: 11px 15px;
 				}
 
@@ -240,7 +244,7 @@
 			}
 		}
 
-		.nav li a, .block-views .view {
+		.block-views .view {
 			margin: 0 5px 10px;
 		}
 
