--- a/less/common.less
+++ b/less/common.less
@@ -235,3 +235,10 @@
     background: none;
   }
 }
+
+/*
+ * Prevent date pickers from being obscured by other items
+ */
+#ui-datepicker-div {
+  z-index: 99 !important;
+}
