--- a/less/content.less
+++ b/less/content.less
@@ -850,7 +850,8 @@
 }
 
 .page-node {
-  .tabs--primary.nav-tabs {
+  .tabs--primary.nav-tabs,
+  ul.action-links {
     display: none;
   }
 }
@@ -859,54 +860,54 @@
 .view-display-id-national,
 #block-views-6c65b09662158a51b164e9a15d88b8ac,
 #block-views-f2076c84f42dfe8435efe1fa2a53a400 {
-	display: none;	// Hide the campus homepage view until it can be disabled
+  display: none;         // Hide the campus homepage view until it can be disabled
 }
 
 .rtecenter {
-	text-align: center;
+  text-align: center;
 }
 
 .crm-container.crm-public .select2-container .select2-choice {
-	height: auto !important;
+  height: auto !important;
 }
 
 .progress.payment {
-	width: 100%;
-	background-color: @cbf-content-blue;
-	height: auto;
-	margin: 20px 0;
+  width: 100%;
+  background-color: @cbf-content-blue;
+  height: auto;
+  margin: 20px 0;
 
-	.progress-bar {
-		width: 33.33%;
-		padding: 5px;
-		font-size: inherit;
+  .progress-bar {
+    width: 33.33%;
+    padding: 5px;
+    font-size: inherit;
 
-		&.past {
-			color: @cbf-content-blue;
-		}
+    &.past {
+      color: @cbf-content-blue;
+    }
 
-		&.present {
-			font-weight: bold;
-			background-color: @cbf-light-blue;
-		}
+    &.present {
+      font-weight: bold;
+      background-color: @cbf-light-blue;
+    }
 
-		&.future {
-			color: black;
-			background-color: @cbf-content-blue;
-		}
-	}
+    &.future {
+      color: black;
+      background-color: @cbf-content-blue;
+    }
+  }
 }
 
 .link-button {
-	.badge;
+  .badge;
 
-	background-color: @cbf-dark-blue;
-	font-size: @font-size-base;
-	padding: 6px 12px;				
+  background-color: @cbf-dark-blue;
+  font-size: @font-size-base;
+  padding: 6px 12px;
 
-	a {
-		color: white;
-	}
+  a {
+    color: white;
+  }
 }
 
 /*
