--- a/css/style.css
+++ b/css/style.css
@@ -10677,6 +10677,45 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
 .content-region .block-system .block-panel .comment-wrapper h3 {
   padding: 0 10px;
 }
+.expandable-view .view-content {
+  max-height: 400px;
+  overflow: hidden;
+  position: relative;
+}
+.expandable-view.open .view-content {
+  max-height: unset;
+  transition: all 2s;
+  -webkit-transition: all 2s;
+}
+.expandable-view .view-content:before {
+  content: '';
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  top: 300px;
+  pointer-events: none;
+  background: -webkit-linear-gradient(transparent, #ffffff);
+  background: -o-linear-gradient(transparent, #ffffff);
+  background: -moz-linear-gradient(transparent, #ffffff);
+  background: linear-gradient(transparent, #ffffff);
+}
+.expandable-view.open .view-content:before {
+  display: none;
+  transition: all 2s;
+  -webkit-transition: all 2s;
+}
+.expandable-view .more-link {
+  display: none !important;
+}
+.expandable-view.open .more-link {
+  display: initial !important;
+}
+.expandable-view .view-footer {
+  text-align: center;
+  font-size: 28px;
+  cursor: pointer;
+}
 .field-type-tablefield {
   clear: both;
 }
