--- a/less/content.less
+++ b/less/content.less
@@ -104,58 +104,58 @@
 }
 
 .sidebar-1-region, .sidebar-2-region {
-	.block-views .block-panel {
-		.panel;
-		.panel-variant(lighten(@cbf-dark-blue, 15%); white; @cbf-dark-blue; @cbf-dark-blue);
+  .block-views .block-panel {
+    .panel;
+    .panel-variant(lighten(@cbf-dark-blue, 15%); white; @cbf-dark-blue; @cbf-dark-blue);
 
-		border-radius: 20px;
-		padding-bottom: 10px;
-		margin-bottom: 25px;
+    border-radius: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 25px;
 
-		.block-title {
-			.panel-heading;
+    .block-title {
+      .panel-heading;
 
-			a {
-				color: white;
-			}
-		}
+      a {
+        color: white;
+      }
+    }
 
-		.more-link {
-			.badge;
+    .more-link {
+      .badge;
 
-			margin-top: @grid-gutter-width;
-			background-color: @cbf-dark-blue;
+      margin-top: @grid-gutter-width;
+      background-color: @cbf-dark-blue;
 
-			a {
-				color: white;
-			}
-		}
-	}
+      a {
+        color: white;
+      }
+    }
+  }
 
-	.block-block .block-panel {
-		.panel;
-		.panel-variant(lighten(@cbf-dark-blue, 15%); white; @cbf-dark-blue; @cbf-dark-blue);
+  .block-block .block-panel {
+    .panel;
+    .panel-variant(lighten(@cbf-dark-blue, 15%); white; @cbf-dark-blue; @cbf-dark-blue);
 
-		border-radius: 20px;
-		padding-bottom: 20px;
-		margin-bottom: 25px;
+    border-radius: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 25px;
 
-		.block-title {
-			.panel-heading;
+    .block-title {
+      .panel-heading;
 
-			a {
-				color: white;
-			}
-		}
+      a {
+        color: white;
+      }
+    }
 
-		#eWAYBlock {
-			margin-top: 10px;
+    #eWAYBlock {
+      margin-top: 10px;
 
-			img {
-				.img-responsive;
-			}
-		}
-	}
+      img {
+        .img-responsive;
+      }
+    }
+  }
 }
 
 .content-region, .sidebar-1-region, .sidebar-2-region {
@@ -670,6 +670,54 @@
 			padding: 0 10px;
 		}
 	}
+}
+
+.expandable-view {
+  .view-content {
+    max-height: 400px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  &.open .view-content {
+    max-height: unset;
+    transition: all 2s;
+    -webkit-transition: all 2s;
+  }
+
+  .view-content:before {
+    content: '';
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    left: 0;
+    top: (400px - 100px);
+    pointer-events: none;
+    background: -webkit-linear-gradient(transparent, white);
+    background: -o-linear-gradient(transparent, white);
+    background: -moz-linear-gradient(transparent, white);
+    background: linear-gradient(transparent, white);
+  }
+
+  &.open .view-content:before {
+    display: none;
+    transition: all 2s;
+    -webkit-transition: all 2s;
+  }
+
+  .more-link {
+    display: none !important;
+  }
+
+  &.open .more-link {
+    display: initial !important;
+  }
+
+  .view-footer {
+    text-align: center;
+    font-size: 28px;
+    cursor: pointer;
+  }
 }
 
 .field-type-tablefield {
