Revert the block titles so icons are their original size and the block border radius is 10px. This reverses changes made on or around 23 Jan 2017.

--- a/css/style.css
+++ b/css/style.css
@@ -7611,7 +7611,7 @@ table .checkbox input[type="checkbox"] {
   padding: 0;
   color: white;
   background: #1e9dd8;
-  border-radius: 20px;
+  border-radius: 10px;
   margin-bottom: 25px;
 }
 #page-header .region-header blockquote {
@@ -8348,7 +8348,7 @@ table .checkbox input[type="checkbox"] {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #96c6ef;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-bottom: 10px;
   margin-bottom: 25px;
 }
@@ -8608,7 +8608,7 @@ a.content-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #96c6ef;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-bottom: 20px;
   margin-bottom: 25px;
 }
@@ -8818,7 +8818,7 @@ a.content-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #036fba;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-bottom: 10px;
   margin-bottom: 25px;
 }
@@ -9210,7 +9210,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #036fba;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-bottom: 20px;
   margin-bottom: 25px;
 }
@@ -9548,7 +9548,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   padding: 10px;
   margin-top: 0;
   margin-bottom: 20px;
-  border-radius: 19px 19px 0 0;
+  border-radius: 9px 9px 0 0;
 }
 .content-region .block-views .block-panel .block-title .title-text,
 .sidebar-1-region .block-views .block-panel .block-title .title-text,
@@ -9559,7 +9559,9 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .content-region .block-block .block-panel .block-title .title-text,
 .sidebar-1-region .block-block .block-panel .block-title .title-text,
 .sidebar-2-region .block-block .block-panel .block-title .title-text {
-  padding: 14px 35px;
+  margin-left: 25px;
+  /* Line up with the midpoint of thumbnail images */
+  padding: 0;
 }
 .content-region .block-views .block-panel .block-title i,
 .sidebar-1-region .block-views .block-panel .block-title i,
@@ -9571,8 +9573,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-1-region .block-block .block-panel .block-title i,
 .sidebar-2-region .block-block .block-panel .block-title i {
   float: left;
-  font-size: 39px;
-  line-height: 50px;
+  width: 50px;
 }
 .content-region .block-views .block-panel .block-title i + .title-text,
 .sidebar-1-region .block-views .block-panel .block-title i + .title-text,
@@ -9584,7 +9585,6 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-1-region .block-block .block-panel .block-title i + .title-text,
 .sidebar-2-region .block-block .block-panel .block-title i + .title-text {
   margin-left: 60px;
-  padding: 14px 0;
 }
 .content-region .block-views .block-panel .view-header,
 .sidebar-1-region .block-views .block-panel .view-header,
@@ -9694,7 +9694,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   /* 15px view-content + 60px views-field - 1px border*/
   color: #02426f;
   background-color: #d8eaf9;
-  border-radius: 20px;
+  border-radius: 10px;
   border-color: #036fba;
 }
 .content-region .block-views .block-panel .view-national-library .view-header blockquote,
@@ -9955,7 +9955,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   font-size: 16px;
   font-weight: 300;
   line-height: 1.4;
-  border-radius: 20px;
+  border-radius: 10px;
   padding-left: 74px;
   /* 15px view-content + 60px views-field - 1px border*/
 }
@@ -10601,7 +10601,7 @@ a.content-region .block-system .block-panel .field-name-field-topics .field-item
   clear: both;
   margin-top: 25px;
   background-color: #d8eaf9;
-  border-radius: 20px;
+  border-radius: 10px;
   border-color: #036fba;
 }
 .content-region .block-system .block-panel .field-name-field-addthis blockquote {
@@ -10689,7 +10689,7 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #036fba;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield > .list-group,
 .field-type-tablefield .tablefield-wrapper .tablefield > .panel-collapse > .list-group {
@@ -10885,10 +10885,10 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
   background-color: #ffffff;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead th:first-child {
-  border-top-left-radius: 19px;
+  border-top-left-radius: 9px;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead th:last-child {
-  border-top-right-radius: 19px;
+  border-top-right-radius: 9px;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield thead a {
   color: white;
@@ -11234,7 +11234,7 @@ a.link-button:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #363636;
-  border-radius: 20px;
+  border-radius: 10px;
   color: #989898;
   background-color: #363636;
 }
