--- a/css/style.css
+++ b/css/style.css
@@ -10678,7 +10678,7 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
   padding: 0 10px;
 }
 .expandable-view .view-content {
-  max-height: 400px;
+  max-height: 320px;
   overflow: hidden;
   position: relative;
 }
@@ -10690,10 +10690,10 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
 .expandable-view .view-content:before {
   content: '';
   width: 100%;
-  height: 100px;
+  height: 80px;
   position: absolute;
   left: 0;
-  top: 300px;
+  top: 240px;
   pointer-events: none;
   background: -webkit-linear-gradient(transparent, #ffffff);
   background: -o-linear-gradient(transparent, #ffffff);
@@ -10714,6 +10714,7 @@ a.content-region .block-system .block-panel .links .comment-add:focus {
 .expandable-view .view-footer {
   text-align: center;
   font-size: 28px;
+  color: #02426f;
   cursor: pointer;
 }
 .field-type-tablefield {
