--- a/less/content.less
+++ b/less/content.less
@@ -673,7 +673,7 @@
 
 .expandable-view {
   .view-content {
-    max-height: 400px;
+    max-height: 320px;
     overflow: hidden;
     position: relative;
   }
@@ -687,10 +687,10 @@
   .view-content:before {
     content: '';
     width: 100%;
-    height: 100px;
+    height: 80px;
     position: absolute;
     left: 0;
-    top: (400px - 100px);
+    top: (320px - 80px);
     pointer-events: none;
     background: -webkit-linear-gradient(transparent, white);
     background: -o-linear-gradient(transparent, white);
@@ -715,6 +715,7 @@
   .view-footer {
     text-align: center;
     font-size: 28px;
+    color: @cbf-dark-blue;
     cursor: pointer;
   }
 }
