Support views that display tables

--- a/less/content.less
+++ b/less/content.less
@@ -308,7 +308,7 @@
 				clear: left;
 			}
 
-			.views-field {
+			div.views-field {
 				padding-left: 60px;
 
 				&.views-field-field-sidebar-content {
