Fix padding on H3 title fields in views

--- a/less/content.less
+++ b/less/content.less
@@ -308,9 +308,12 @@
 				clear: left;
 			}
 
-			div.views-field {
+			div.views-field,
+			h3.views-field {
 				padding-left: 60px;
+			}
 
+			div.views-field {
 				&.views-field-field-sidebar-content {
 					padding-left: 0;
 				}
