--- a/css/style.css
+++ b/css/style.css
@@ -10096,7 +10096,13 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-2-region .block-views .block-panel div.views-field,
 .content-region .block-system .block-panel div.views-field,
 .sidebar-1-region .block-system .block-panel div.views-field,
-.sidebar-2-region .block-system .block-panel div.views-field {
+.sidebar-2-region .block-system .block-panel div.views-field,
+.content-region .block-views .block-panel h3.views-field,
+.sidebar-1-region .block-views .block-panel h3.views-field,
+.sidebar-2-region .block-views .block-panel h3.views-field,
+.content-region .block-system .block-panel h3.views-field,
+.sidebar-1-region .block-system .block-panel h3.views-field,
+.sidebar-2-region .block-system .block-panel h3.views-field {
   padding-left: 60px;
 }
 .content-region .block-views .block-panel div.views-field.views-field-field-sidebar-content,
