Force thumbnail images in views to be 50px wide.

--- a/less/content.less
+++ b/less/content.less
@@ -328,6 +328,14 @@
 					margin-left: -60px;
 				}
 
+				&.views-field-field-image,
+				&.views-field-field-thumbnail-image,
+				&.views-field-field-series-image {
+					img {
+						width: 50px;
+					}
+				}
+
 				&.views-field-field-is-audio,
 				&.views-field-field-is-text,
 				&.views-field-field-is-video {
