--- a/css/style.css
+++ b/css/style.css
@@ -10152,6 +10152,26 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   float: left;
   margin-left: -60px;
 }
+.content-region .block-views .block-panel div.views-field.views-field-field-image img,
+.sidebar-1-region .block-views .block-panel div.views-field.views-field-field-image img,
+.sidebar-2-region .block-views .block-panel div.views-field.views-field-field-image img,
+.content-region .block-system .block-panel div.views-field.views-field-field-image img,
+.sidebar-1-region .block-system .block-panel div.views-field.views-field-field-image img,
+.sidebar-2-region .block-system .block-panel div.views-field.views-field-field-image img,
+.content-region .block-views .block-panel div.views-field.views-field-field-thumbnail-image img,
+.sidebar-1-region .block-views .block-panel div.views-field.views-field-field-thumbnail-image img,
+.sidebar-2-region .block-views .block-panel div.views-field.views-field-field-thumbnail-image img,
+.content-region .block-system .block-panel div.views-field.views-field-field-thumbnail-image img,
+.sidebar-1-region .block-system .block-panel div.views-field.views-field-field-thumbnail-image img,
+.sidebar-2-region .block-system .block-panel div.views-field.views-field-field-thumbnail-image img,
+.content-region .block-views .block-panel div.views-field.views-field-field-series-image img,
+.sidebar-1-region .block-views .block-panel div.views-field.views-field-field-series-image img,
+.sidebar-2-region .block-views .block-panel div.views-field.views-field-field-series-image img,
+.content-region .block-system .block-panel div.views-field.views-field-field-series-image img,
+.sidebar-1-region .block-system .block-panel div.views-field.views-field-field-series-image img,
+.sidebar-2-region .block-system .block-panel div.views-field.views-field-field-series-image img {
+  width: 50px;
+}
 .content-region .block-views .block-panel div.views-field.views-field-field-is-audio,
 .sidebar-1-region .block-views .block-panel div.views-field.views-field-field-is-audio,
 .sidebar-2-region .block-views .block-panel div.views-field.views-field-field-is-audio,
